tests/kyverno-policies/add-pvc-scratch-user/pvc-webservice-scratch.yaml
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-scratch
  namespace: webservice
  annotations:
    osc.edu/fileset: user-test-fileset
    osc.edu/scratch-user: test
  labels:
    osc.edu/service-account: test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-scratch
