tests/kyverno-policies/add-pvc-scratch-user/resources.yaml
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-scratch
  namespace: webservice
  annotations:
    osc.edu/fileset: user-test-fileset
  labels:
    osc.edu/service-account: test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-scratch
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-pass-storageclass
  namespace: webservice
  annotations:
    osc.edu/fileset: user-test-fileset
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-scratch
  namespace: paas
  annotations:
    osc.edu/fileset: user-test-fileset
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-scratch
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-pass-storageclass
  namespace: paas
  annotations:
    osc.edu/fileset: user-test-fileset
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
